--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,18 @@
 	
     -------------------------------------------- */
 
+
+
+#particles-js{
+  width: 100%;
+  height: 100%;
+  background-color: #b61924;
+  background-image: url('');
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
+
 /* ----- 1.1 ELEMENTS ----- */   
 *,
 *:after,
